# uw_gazebo

./: .gitignore  .rosinstall  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: ci.yaml
config/: move_base.yaml
launch/: empty_simulation.launch  house_simulation.launch  playground_simulation.launch  view_house.launch
launch/include/: common.xml  spawn_astro.xml  spawn_robot.xml
maps/house/: map.yaml
models/aws_robomaker_residential_AirconditionerA_01/: model.sdf
models/aws_robomaker_residential_AirconditionerB_01/: model.sdf
models/aws_robomaker_residential_BalconyTable_01/: model.sdf
models/aws_robomaker_residential_Bed_01/: model.sdf
models/aws_robomaker_residential_Board_01/: model.sdf
models/aws_robomaker_residential_Carpet_01/: model.sdf
models/aws_robomaker_residential_ChairA_01/: model.sdf
models/aws_robomaker_residential_ChairD_01/: model.sdf
models/aws_robomaker_residential_Chandelier_01/: model.sdf
models/aws_robomaker_residential_CoffeeTable_01/: model.sdf
models/aws_robomaker_residential_CookingBench_01/: model.sdf
models/aws_robomaker_residential_Curtain_01/: model.sdf
models/aws_robomaker_residential_DeskPortraitA_01/: model.sdf
models/aws_robomaker_residential_DeskPortraitA_02/: model.sdf
models/aws_robomaker_residential_DeskPortraitB_01/: model.sdf
models/coke_can/: README.txt  model.sdf
photos/: .gitignore
robots/: astro.gazebo.xacro  fetch.gazebo.xacro
scripts/: add_coke  house_add_table_objects  modelstate.py
urdf/: d415.gazebo.urdf.xacro
worlds/: groceries_gazebo_env  house.world
(+52 files in other folders)
